[tool.poetry]
name = "grafana-http-notifier"
version = "0.1.0"
description = "A simple api that receive grafana alerts and send dynamically(using DynamoDB) to an SQS Queue"
authors = ["shikow <francisco.pereira@tooseguros.com.br>"]
license = "shikowsp@gmail.com"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
