[tool.poetry]
name = "grafana-http-notifier"
version = "0.1.0"
description = "A simple api that receive grafana alerts and send dynamically(using DynamoDB) to an SQS Queue"
authors = ["shikow <shikowsp@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
boto3 = "^1.19.7"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
